edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

// Next available tag: 3
message ActiveComponent {
  // base 64 encoded Deployment:ActiveComponent ids.
  string id = 1; // @gotags: search:"Image Sha,hidden" sql:"pk"
  string deployment_id = 3; // @gotags: search:"Deployment ID,hidden" sql:"fk(Deployment:id),no-fk-constraint,directional,index=hash,type(uuid)"
  string component_id = 4; // @gotags: search:"Component ID,hidden" sql:"fk(ImageComponent:id),no-fk-constraint,directional"

  // Represent a context of the active edge.
  message ActiveContext {
    string container_name = 1; // @gotags: search:"Container Name,hidden"
    string image_id = 2; // @gotags: search:"Image Sha,hidden"
  }

  // Map from container name to the active context of an edge.
  map<string, ActiveContext> DEPRECATED_active_contexts = 2 [lazy = true]; // @gotags: search:"-"

  repeated ActiveContext active_contexts_slice = 5 [lazy = true];
}
