syntax = "proto3";

package storage;

import "storage/image.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";

message ImageComponentV2 {
  // ID will be form of Name+version+arch+imageID
  string id = 1; // @gotags: search:"Component ID,hidden" sql:"pk,id"
  string name = 2; // @gotags: search:"Component"
  string version = 3; // @gotags: search:"Component Version"
  int64 priority = 4; // @gotags: search:"Component Risk Priority,hidden"
  SourceType source = 5; // @gotags: search:"Component Source"
  float risk_score = 6; // @gotags: search:"Component Risk Score,hidden"
  oneof set_top_cvss {
    float top_cvss = 7; // @gotags: search:"Component Top CVSS"
  }
  // Component version that fixes all the fixable vulnerabilities in this component.
  string fixed_by = 8;
  string operating_system = 9; // @gotags: search:"Operating System"
  // was hash index, making it btree
  string image_id = 10 [deprecated = true]; // @gotags: sql:"fk(Image:id),index=btree"
  /// Layer that contains this component
  oneof has_layer_index {
    int32 layer_index = 11;
  }

  string location = 12; // @gotags: search:"Component Location,hidden"

  string architecture = 13;

  string image_id_v2 = 14; // @gotags: sql:"fk(ImageV2:id),index=btree,allow-null"
}
